# Makefile for flopoco/src/LNS

ACLOCAL_AMFLAGS = -I ../../m4


noinst_LTLIBRARIES = libLNS.la

noinst_HEADERS = AtanPow.hpp  Cotran.hpp  CotranHybrid.hpp  CotranTables.hpp  LNSAdd.hpp  LNSAddSub.hpp  LNSDiv.hpp  LNSMul.hpp  LNSSqrt.hpp  LogSinCos.hpp

libLNS_la_SOURCES = AtanPow.cpp  Cotran.cpp  CotranHybrid.cpp  CotranTables.cpp  LNSAdd.cpp  LNSAddSub.cpp  LNSDiv.cpp  LNSMul.cpp  LNSSqrt.cpp  LogSinCos.cpp


